added python script to download kaggle data, only working on windows for now. Need to put raw data from LC on google drive

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,10 @@ rsconnect/
 
 # checkpoints for notebooks
 .ipynb_checkpoints
+
+# don't want any zipped data/csv data files tracked
+.zip
+.csv
+.sqlite
+
+Data/
